--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -12,7 +12,7 @@
   --text-color: #333333;
   --blockquote-border-color: #eee;
   --blockquote-text-color: #9a9a9a;
-  --link-color: #2a408e;
+  --link-color: #50606d;
   --link-underline-color: #dee2e6;
   --text-muted-color: gray;
   --tb-odd-bg: #fbfcfd;
